tests/diagnostic_golden/semantic_decl_char_len.diag
error[CF3103]: invalid CHARACTER length specification
  --> tests/diagnostic_golden/semantic_decl_char_len.f:2:7
   = stage: semantic
   = help: see docs/errors.md#CF3103
  |
2 |       CHARACTER*(*) A
  |       ^
   = note: CHARACTER length must be constant unless the entity is a dummy argument, function result, POINTER, or ALLOCATABLE.
   = help: Use a positive constant length here, or move the assumed/deferred length onto a supported entity kind.
