tests/diagnostic_golden/semantic_decl_char_len.f
      SUBROUTINE S
      CHARACTER*(*) A
      END
